# milvus-frontend

./: .gitignore  README.md  nuitka-package.config.yml  pyproject.toml  test.py
assets/: OIP-C.jfif  README.md  main.ui  main_ui.py  qrc1.qrc  qrc1_rc.py
src/: config.py  drop_collections.py  main.py  test.py  test_recognizer.py
src/common/: __init__.py  config.py  log.py  model.py
src/db/: README.md  di.py  init_db.py  proxy.py  session.py
src/db/crud/: __init__.py  crud_patient.py
src/db/models/: patient_2.py  patients.py
src/milvus/: client.py  config.py  embedding.py  types.py
src/ml/: __init__.py  config.py  di.py  model.py  parse.py  predict.py  recognize.py  train.py  utils.py
src/ml/output/: label.txt  test_sample.txt  train_sample.txt  vocab.txt
src/network/: api.py  model.py
src/ppocr/: PPOCR_api.py  __init__.py  model.py
src/ui/: README.md  __init__.py  gui.py  interface.py  main.ui  presenter.py  table_model.py  view.py  viewmodel.py
