[project]
name = "milvus-frontend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "termtate", email = "meng360842@gmail.com" }
]
dependencies = [
    "pandas==1.5.0",
    # "PyMySQL==1.0.2",
    "PySide2==5.15.2.1",
    # "pytorch_crf==0.7.2",
    # "seqeval==1.2.2",
    # "torch==1.12.1",
    # "torchcrf==1.1.0",
    # "matplotlib>=3.7.2",
    # "qt-material>=2.14",
    # "transformers>=4.31.0",
    # "pywin32>=306",
    # "pdfminer.six>=20221105",
    # "python-docx>=0.8.11",
    # "paddleocr>=2.6.1.3",
    # "paddlepaddle~=2.5.0",
    "pydantic>=2.1.1",
    "httpx>=0.24.1",
    "qt-material>=2.14",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true


[[sources]]
name = "default"
url = "https://mirror.baidu.com/pypi/simple"